--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
             
 h1 {
                  text-align: center;
-                 font-family: Arial, Helvetica, sans-serif;
+                 font-family: CinzelDecorative-Bold, Helvetica, sans-serif;
                  font-weight: bold;
                  text-transform: uppercase;
                  border-bottom: 1 px solid #68b1dc;
